# stratum

./: .gitignore  Cargo.toml  diesel.toml
design/: purpose.md  structure.md
examples/graders/: echo.cpp
migrations/2018-12-23-123456_update_trigger/: down.sql  up.sql
migrations/2018-12-23-151921_teams/: up.sql
migrations/2018-12-23-160535_users/: up.sql
migrations/2019-01-04-160034_sessions/: up.sql
migrations/2019-01-14-093516_problems/: down.sql  up.sql
migrations/2019-01-14-095259_contests/: down.sql  up.sql
migrations/2019-01-15-183419_contestproblems/: down.sql  up.sql
migrations/2019-01-19-172728_problemstatements/: down.sql  up.sql
migrations/2019-01-19-173436_remove_statements_from_problems/: down.sql  up.sql
migrations/2019-01-19-192158_rename_contest_problems/: down.sql  up.sql
migrations/2019-01-25-164309_test_cases/: down.sql  up.sql
migrations/2019-01-26-134103_submission/: up.sql
migrations/2019-01-26-142137_submission_file/: down.sql  up.sql
migrations/2019-01-27-151423_judgement/: down.sql  up.sql
migrations/2019-01-27-160849_testcase_judgement/: down.sql  up.sql
src/: config.rs  database.rs  main.rs  models.rs  multipart.rs  pass.rs  schema.rs  util.rs
src/controllers/: mod.rs  overview.rs  scoreboard.rs  session.rs  team.rs  user.rs
src/controllers/admin/: mod.rs  overview.rs  problem_statement.rs  team.rs  test_case.rs  user.rs
src/controllers/contest/: mod.rs  problem.rs  scoreboard.rs  submission.rs
src/middleware/: checkrights.rs  contestbinder.rs  databinder.rs  mod.rs
stratum-db/: Cargo.toml
stratum-db/src/: judgement_status.rs  lib.rs  models.rs  schema.rs
stratum-grader/: Cargo.toml
stratum-grader/src/: main.rs  poll_actor.rs  run_actor.rs
stratum-web/: Cargo.toml  build.rs
stratum-web/src/: error_pages.rs  main.rs  multipart.rs  pass.rs  template.rs  util.rs
stratum-web/src/controllers/: legal.rs  mod.rs  overview.rs  session.rs
stratum-web/src/controllers/admin/: mod.rs  overview.rs  problem_statement.rs  submission.rs  team.rs  test_case.rs  user.rs
stratum-web/src/controllers/contest/: problem.rs  scoreboard.rs  submission.rs
stratum-web/src/middleware/: checkconteststarted.rs  checkrights.rs  contestbinder.rs  databinder.rs
stratum-web/templates/: base.html
stratum-web/templates/admin/: base.html  index.html
stratum-web/templates/admin/problem_statement/: create.html  index.html
stratum-web/templates/admin/submission/: index.html  show.html
stratum-web/templates/admin/team/: show.html
stratum-web/templates/admin/test_case/: index.html
stratum-web/templates/admin/user/: index.html  show.html
stratum-web/templates/contest/: base.html
stratum-web/templates/contest/problem/: index.html
stratum-web/templates/contest/scoreboard/: index.html  show.html
stratum-web/templates/contest/submission/: index.html  show.html
stratum-web/templates/error_pages/: 404.html
stratum-web/templates/legal/: index.html
stratum-web/templates/overview/: index.html
stratum-web/templates/session/: login.html
templates/: base.html
templates/admin/: base.html
templates/admin/problem_statement/: create.html  index.html
templates/admin/team/: create.html  index.html
templates/admin/test_case/: create.html  index.html
templates/admin/user/: create.html  index.html  show.html
templates/contest/: base.html
templates/contest/scoreboard/: show.html
templates/error_pages/: 500.html
templates/overview/: index.html
templates/scoreboard/: show.html
templates/session/: login.html
templates/team/: create.html  index.html  show.html
templates/user/: index.html
