[package]
name = "calamaris"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"

[dependencies]
# Web framework
actix = "0.7"
actix-web = "0.7"
# Password hashing library
argon2rs = "0.2.5"
# Timezone library
chrono = { version = "0.4", features = ["serde"] }
# Database ORM and Query Builder
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2"] }
# Configuration library
dotenv = "0.13"
# Configuration of logging library
env_logger = "0.6"
# TODO comment
futures = "0.1"
# Standard Rust logging library
log = "0.4"
# Serialization library
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
# Templating library
tera = "0.11"

## BAD STUFF
# Pin Ring to slightly older for Rust 1.29.1 support
#ring = "=0.13.3"
# Pin trust-dns-resolver as well
#trust-dns-resolver = "=0.10.0"
