[package]
name = "stratum-db"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "0.7", features = ["serde", "v4"] }

