[package]
name = "stratum-web"
version = "0.1.0"
authors = ["Henk van der Laan <opensource@henkvdlaan.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[build-dependencies]
walkdir = "2"
zip = "0.5"

[dependencies]
stratum-db = {path = "../stratum-db"}
actix = "0.7"
actix-web = "0.7"
argon2rs = "0.2.5"
askama = { version = "0.8", features = ["with-actix-web"] }
bytes = "0.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.13"
env_logger = "0.6"
futures = "0.1"
log = "0.4"
rand = "0.6"
sentry = "0.15"
sentry-actix = "0.15"
serde = { version = "1.0", features = ["derive"]}
uuid = { version = "0.7", features = ["serde", "v4"] }
